# os2i

./: .gitignore  Agend.MD  Makefile  README.md  agents.md  architecture.md  architecture_reference.md  go_report.md  grounded_tools.md  issues.md  os2i_spec.md  patch_execution_outcome_spec.md  pyproject.toml  taskexecutor_spec.md  to_do.md  transition2exec_issues.json  transition2exec_providers.md
examples/: task01_executable_dstt.md
prompts/: dstt_format.md  feasibility_check.md  patch_resolution.md  tool_sequence.md
seed/: batch_006_simple_tasks.jsonl  live_tasks.jsonl  patch_seed.json  qwen_seed.jsonl  transition2exec_seed.json
tests/: conftest.py  test_dspy_module.py  test_service.py
training/: README.md  results_live_run01.jsonl  results_live_run02.jsonl  results_live_run03.jsonl  results_live_run04.jsonl  results_live_run05.jsonl  results_qwen2.5-7b_20260321_153443.jsonl  results_qwen2.5-7b_20260321_163220.jsonl  results_qwen_3b_run01.jsonl  results_qwen_3b_run02.jsonl  results_qwen_3b_run03.jsonl  results_qwen_7b_batch006_run01.jsonl  results_qwen_7b_batch006_run02.jsonl  results_qwen_7b_batch006_run03.jsonl  results_qwen_7b_batch006_run04.jsonl  results_qwen_7b_batch006_run05.jsonl  results_qwen_7b_batch006_run06.jsonl  results_qwen_7b_batch006_run07.jsonl  results_qwen_7b_batch006_run08.jsonl  results_qwen_7b_batch006_run09.jsonl  results_qwen_7b_batch006_run10.jsonl  results_qwen_7b_batch006_run11.jsonl  results_qwen_7b_batch006_run12.jsonl  results_qwen_7b_batch006_run13.jsonl  results_qwen_7b_batch006_run14.jsonl  results_qwen_7b_run01.jsonl  (+5 more)
(+12 files in other folders)
